menambahkan gambar dihome,about dan service

--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
           </a>
           <div class="p-5">
             <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-              <a href="#">Bonnie Green</a>
+              <a href="#">Rois Azzam Shiddiq</a>
             </h3>
             <span class="text-gray-500 dark:text-gray-400">CEO & Web Developer</span>
             <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
@@ -221,12 +221,11 @@
         <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
             <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-              src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/michael-gouch.png"
-              alt="Michael Avatar" />
+              src="img/Akmal1.jpg" alt="" />
           </a>
           <div class="p-5">
             <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-              <a href="#">Michael Gough</a>
+              <a href="#">Akmal Maulana</a>
             </h3>
             <span class="text-gray-500 dark:text-gray-400">Senior Front-end Developer</span>
             <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
@@ -275,12 +274,11 @@
         <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
             <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-              src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/sofia-mcguire.png"
-              alt="Sofia Avatar" />
+              src="img/bili.jpeg" alt="bili gunawan" />
           </a>
           <div class="p-5">
             <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-              <a href="#">Lana Byrd</a>
+              <a href="#">Bili Gunawan</a>
             </h3>
             <span class="text-gray-500 dark:text-gray-400">Marketing & Sale</span>
             <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
@@ -336,7 +334,7 @@
       <a href="#"
         class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
         <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-          src="img/image.png" alt="" />
+          src="img/servisbesar.jpg" alt="" />
         <div class="flex flex-col justify-between p-4 leading-normal">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             Service Besar
@@ -352,7 +350,7 @@
       <a href="#"
         class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
         <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-          src="img/image.png" alt="" />
+          src="img/serviskecil.jpg" alt="" />
         <div class="flex flex-col justify-between p-4 leading-normal">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             Service Ringan
@@ -368,7 +366,7 @@
       <a href="#"
         class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
         <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-          src="img/image.png" alt="" />
+          src="img/Body-Repair.jpg" alt="" />
         <div class="flex flex-col justify-between p-4 leading-normal">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             Body Repair
@@ -383,7 +381,7 @@
       <a href="#"
         class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700">
         <img class="object-cover w-full rounded-t-lg h-96 md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-          src="img/image.png" alt="" />
+          src="img/pembersihan.jpeg" alt="" />
         <div class="flex flex-col justify-between p-4 leading-normal">
           <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
             Pembersihan dan Detailing
