--- a/public/about.html
+++ b/public/about.html
@@ -217,7 +217,7 @@
             <div class="bg-white shadow-lg rounded-lg overflow-hidden">
               <img
                 class="w-full h-48 object-cover"
-                src="img/image.png"
+                src="img/Akmal1.jpg"
                 alt="Montir 1"
               />
               <div class="p-4">
@@ -241,7 +241,7 @@
             <div class="bg-white shadow-lg rounded-lg overflow-hidden">
               <img
                 class="w-full h-48 object-cover"
-                src="img/image.png"
+                src="img/bili.jpeg"
                 alt="Montir 3"
               />
               <div class="p-4">
