--- a/public/service.html
+++ b/public/service.html
@@ -30,7 +30,7 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <!-- Logo -->
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Logo" />
+        <img src="img/rojali.png" class="h-8" alt="Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Bengkel King</span>
       </a>
 
@@ -99,7 +99,7 @@
           <a href="#"
             class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700 w-full h-full">
             <img class="object-cover w-full h-64 rounded-t-lg md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-              src="img/image.png" alt="Service Besar">
+              src="img/servisbesar.jpg" alt="Service Besar">
             <div class="flex flex-col justify-between p-4 leading-normal flex-grow">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                 Service Besar
@@ -134,7 +134,7 @@
           <a href="#"
             class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700 w-full h-full">
             <img class="object-cover w-full h-64 rounded-t-lg md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-              src="img/image.png" alt="Service Kecil">
+              src="img/serviskecil.jpg" alt="Service Kecil">
             <div class="flex flex-col justify-between p-4 leading-normal flex-grow">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                 Service Ringan
@@ -168,7 +168,7 @@
           <a href="#"
             class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700 w-full h-full">
             <img class="object-cover w-full h-64 rounded-t-lg md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-              src="img/image.png" alt="Body Repair">
+              src="img/Body-Repair.jpg" alt="Body Repair">
             <div class="flex flex-col justify-between p-4 leading-normal flex-grow">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                 Body Repair
@@ -201,7 +201,7 @@
           <a href="#"
             class="flex flex-col items-center bg-white border border-gray-200 rounded-lg shadow md:flex-row md:max-w-xl hover:bg-gray-100 dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700 w-full h-full">
             <img class="object-cover w-full h-64 rounded-t-lg md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-              src="img/image.png" alt="Pembersihan & Detailing">
+              src="img/pembersihan.jpeg" alt="Pembersihan & Detailing">
             <div class="flex flex-col justify-between p-4 leading-normal flex-grow">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
                 Pembersihan & Detailing
