perbaikan footer dll

--- a/public/about.html
+++ b/public/about.html
@@ -271,7 +271,7 @@
     </main>
 
     <footer class="bg-blue-600 text-white py-4 text-center">
-      <p>&copy; 2025 Bengkel Kami. All rights reserved.</p>
+      <p>&copy; 2025 Bengkel King. All rights reserved.</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
