--- a/public/service.html
+++ b/public/service.html
@@ -246,10 +246,10 @@
   <div class="flex items-center mb-5">
     <p
       class="bg-blue-100 text-blue-800 text-sm font-semibold inline-flex items-center p-1.5 rounded dark:bg-blue-200 dark:text-blue-800">
-      8.7</p>
+      8.8</p>
     <p class="ms-2 font-medium text-gray-900 dark:text-white">Excellent</p>
     <span class="w-1 h-1 mx-2 bg-gray-900 rounded-full dark:bg-gray-500"></span>
-    <p class="text-sm font-medium text-gray-500 dark:text-gray-400">376 reviews</p>
+    <p class="text-sm font-medium text-gray-500 dark:text-gray-400">476 reviews</p>
     <a href="#" class="ms-auto text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">Read all
       reviews</a>
   </div>
@@ -286,9 +286,9 @@
         <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Facilities</dt>
         <dd class="flex items-center">
           <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
-            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 54%"></div>
+            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 78%"></div>
           </div>
-          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">5.4</span>
+          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">7.8</span>
         </dd>
       </dl>
     </div>
@@ -306,9 +306,9 @@
         <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Cleanliness</dt>
         <dd class="flex items-center mb-3">
           <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
-            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 70%"></div>
+            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 83%"></div>
           </div>
-          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">7.0</span>
+          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.3</span>
         </dd>
       </dl>
       <dl>
@@ -324,55 +324,11 @@
   </div>
   
   <!-- Footer -->
-  <footer class="bg-white dark:bg-gray-900">
-    <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-      <div class="md:flex md:justify-between">
-        <div class="mb-6 md:mb-0">
-          <a href="https://flowbite.com/" class="flex items-center">
-            <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 me-3" alt="FlowBite Logo" />
-            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
-          </a>
-        </div>
-        <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
-          <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Resources</h2>
-            <ul class="text-gray-500 dark:text-gray-400 font-medium">
-              <li class="mb-4">
-                <a href="https://flowbite.com/" class="hover:underline">Flowbite</a>
-              </li>
-              <li>
-                <a href="https://tailwindcss.com/" class="hover:underline">Tailwind CSS</a>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Follow us</h2>
-            <ul class="text-gray-500 dark:text-gray-400 font-medium">
-              <li class="mb-4">
-                <a href="https://github.com/themesberg/flowbite" class="hover:underline ">Github</a>
-              </li>
-              <li>
-                <a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Discord</a>
-              </li>
-            </ul>
-          </div>
-          <div>
-            <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Legal</h2>
-            <ul class="text-gray-500 dark:text-gray-400 font-medium">
-              <li class="mb-4">
-                <a href="#" class="hover:underline">Privacy Policy</a>
-              </li>
-              <li>
-                <a href="#" class="hover:underline">Terms &amp; Conditions</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+   <div>
       <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
       <div class="sm:flex sm:items-center sm:justify-between">
-        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/"
-            class="hover:underline">Flowbite™</a>. All Rights Reserved.
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2025 <a href="https://flowbite.com/"
+            class="hover:underline">Bengkel King</a>. All Rights Reserved.
         </span>
         <div class="flex mt-4 sm:justify-center sm:mt-0">
           <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
@@ -419,8 +375,6 @@
             </svg>
             <span class="sr-only">Dribbble account</span>
           </a>
-        </div>
-      </div>
     </div>
   </footer>
   <!-- footer end -->
