--- a/public/about.html
+++ b/public/about.html
@@ -255,7 +255,7 @@
             <div class="bg-white shadow-lg rounded-lg overflow-hidden">
               <img
                 class="w-full h-48 object-cover"
-                src="img/image.png"
+                src="img/Rois.jpg"
                 alt="Montir 4"
               />
               <div class="p-4">
