--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
         <div class="items-center bg-gray-50 rounded-lg shadow sm:flex dark:bg-gray-800 dark:border-gray-700">
           <a href="#">
             <img class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-              src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/bonnie-green.png"
+              src="img/Rois.jpg"
               alt="Bonnie Avatar" />
           </a>
           <div class="p-5">
