--- a/public/service.html
+++ b/public/service.html
@@ -235,13 +235,13 @@
     </div>
     <div class="text-center mt-8">
       <a href="form-pemesanan.html"
-        class="inline-block px-8 py-3 text-white bg-blue-500 hover:bg-blue-600 rounded-md text-lg">
-        Pesan Sekarang
-      </a>
+   class="relative inline-block px-8 py-3 text-white bg-blue-500 rounded-md text-lg transition duration-300 ease-in-out group overflow-hidden">
+   <span class="absolute inset-0 bg-gradient-to-r from-blue-500 to-purple-600 opacity-0 transition-opacity duration-300 group-hover:opacity-100"></span>
+   <span class="relative z-10">Pesan Sekarang</span>
+</a>
+
     </div>
   </div>
-
-
 
   <div class="flex items-center mb-5">
     <p
