--- a/public/about.html
+++ b/public/about.html
@@ -15,7 +15,7 @@
   class="bg-white border-gray-200 dark:bg-gray-900 fixed top-0 w-full z-50 shadow"
 >
   <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 text-white"
   >
     <!-- Logo -->
     <a
