--- a/public/service.html
+++ b/public/service.html
@@ -243,85 +243,88 @@
     </div>
   </div>
 
-  <div class="flex items-center mb-5">
-    <p
-      class="bg-blue-100 text-blue-800 text-sm font-semibold inline-flex items-center p-1.5 rounded dark:bg-blue-200 dark:text-blue-800">
-      8.8</p>
-    <p class="ms-2 font-medium text-gray-900 dark:text-white">Excellent</p>
-    <span class="w-1 h-1 mx-2 bg-gray-900 rounded-full dark:bg-gray-500"></span>
-    <p class="text-sm font-medium text-gray-500 dark:text-gray-400">476 reviews</p>
-    <a href="#" class="ms-auto text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">Read all
-      reviews</a>
-  </div>
-  <div class="gap-8 sm:grid sm:grid-cols-2">
-    <div>
-      <dl>
-        <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Staff</dt>
-        <dd class="flex items-center mb-3">
-          <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
-            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 88%"></div>
-          </div>
-          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.8</span>
-        </dd>
-      </dl>
-      <dl>
-        <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Comfort</dt>
-        <dd class="flex items-center mb-3">
-          <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
-            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 89%"></div>
-          </div>
-          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.9</span>
-        </dd>
-      </dl>
-      <dl>
-        <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Free WiFi</dt>
-        <dd class="flex items-center mb-3">
-          <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
-            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 88%"></div>
-          </div>
-          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.8</span>
-        </dd>
-      </dl>
-      <dl>
-        <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Facilities</dt>
-        <dd class="flex items-center">
-          <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
-            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 78%"></div>
-          </div>
-          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">7.8</span>
-        </dd>
-      </dl>
+  <div class="w-5/12 md:w-8/12 content-center text-center ml-10 mt-10 md:ml-32 sm:ml-20 lg:ml-60">
+    <div class="flex items-center mb-5">
+      <p
+        class="bg-blue-100 text-blue-800 text-sm font-semibold inline-flex items-center p-1.5 rounded dark:bg-blue-200 dark:text-blue-800">
+        8.8</p>
+      <p class="ms-2 font-medium text-gray-900 dark:text-white">Excellent</p>
+      <span class="w-1 h-1 mx-2 bg-gray-900 rounded-full dark:bg-gray-500"></span>
+      <p class="text-sm font-medium text-gray-500 dark:text-gray-400">476 reviews</p>
+      <a href="#" class="ms-auto text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">Read all
+        reviews</a>
     </div>
-    <div>
-      <dl>
-        <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Value for money</dt>
-        <dd class="flex items-center mb-3">
-          <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
-            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 89%"></div>
-          </div>
-          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.9</span>
-        </dd>
-      </dl>
-      <dl>
-        <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Cleanliness</dt>
-        <dd class="flex items-center mb-3">
-          <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
-            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 83%"></div>
-          </div>
-          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.3</span>
-        </dd>
-      </dl>
-      <dl>
-        <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Location</dt>
-        <dd class="flex items-center">
-          <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
-            <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 89%"></div>
-          </div>
-          <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.9</span>
-        </dd>
-      </dl>
+    <div class="gap-8 sm:grid sm:grid-cols-2">
+      <div>
+        <dl>
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Staff</dt>
+          <dd class="flex items-center mb-3">
+            <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
+              <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 88%"></div>
+            </div>
+            <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.8</span>
+          </dd>
+        </dl>
+        <dl>
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Comfort</dt>
+          <dd class="flex items-center mb-3">
+            <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
+              <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 89%"></div>
+            </div>
+            <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.9</span>
+          </dd>
+        </dl>
+        <dl>
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Free WiFi</dt>
+          <dd class="flex items-center mb-3">
+            <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
+              <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 88%"></div>
+            </div>
+            <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.8</span>
+          </dd>
+        </dl>
+        <dl>
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Facilities</dt>
+          <dd class="flex items-center">
+            <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
+              <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 78%"></div>
+            </div>
+            <span class="text-sm font-medium text-gray-500 dark:text-gray-400">7.8</span>
+          </dd>
+        </dl>
+      </div>
+      <div>
+        <dl>
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Value for money</dt>
+          <dd class="flex items-center mb-3">
+            <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
+              <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 89%"></div>
+            </div>
+            <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.9</span>
+          </dd>
+        </dl>
+        <dl>
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Cleanliness</dt>
+          <dd class="flex items-center mb-3">
+            <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
+              <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 83%"></div>
+            </div>
+            <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.3</span>
+          </dd>
+        </dl>
+        <dl>
+          <dt class="text-sm font-medium text-gray-500 dark:text-gray-400">Location</dt>
+          <dd class="flex items-center">
+            <div class="w-full bg-gray-200 rounded h-2.5 dark:bg-gray-700 me-2">
+              <div class="bg-blue-600 h-2.5 rounded dark:bg-blue-500" style="width: 89%"></div>
+            </div>
+            <span class="text-sm font-medium text-gray-500 dark:text-gray-400">8.9</span>
+          </dd>
+        </dl>
+      </div>
     </div>
   </div>
+  
   
   <!-- Footer -->
    <div>
