--- a/public/about.html
+++ b/public/about.html
@@ -22,13 +22,13 @@
       class="flex items-center space-x-3 rtl:space-x-reverse"
     >
       <img
-        src="https://flowbite.com/docs/images/logo.svg"
+        src="img/logo.jpg"
         class="h-8"
         alt="Logo"
       />
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-        >Bengkel ..</span
+        >Bengkel King</span
       >
     </a>
     <!-- Search and Mobile Menu Button -->
