--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <!-- Logo -->
       <a class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Bengkel King Bilman</span>
+        <img src="img/logo.jpg" class="h-8" alt="Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Bengkel King</span>
       </a>
 
       <!-- Search and Mobile Menu Button -->
