--- a/public/service.html
+++ b/public/service.html
@@ -30,7 +30,7 @@
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <!-- Logo -->
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="img/rojali.png" class="h-8" alt="Logo" />
+        <img src="img/logo.jpg" class="h-8" alt="Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Bengkel King</span>
       </a>
 
