--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="scroll-smooth">
+<html>
 
 <head>
   <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollToPlugin.min.js"></script>
 </head>
 
-<body class="scroll-smooth bg-gray-100 dark:bg-gray-800">
+<body class=" bg-gray-100 dark:bg-gray-800">
   <nav class="bg-white border-gray-200 dark:bg-gray-900 fixed top-0 w-full z-50 shadow">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <!-- Logo -->
@@ -80,7 +80,7 @@
     <div class="text-center">
       <h1
         class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
-        Selamat Datang di Bengkel King Bilman
+        Selamat Datang di Bengkel King
       </h1>
       <p class="mb-6 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">
         Kami adalah bengkel terpercaya yang menyediakan berbagai layanan untuk
