--- a/public/service.html
+++ b/public/service.html
@@ -325,7 +325,7 @@
     </div>
   </div>
   <!-- footer -->
-  <div class="w-full">
+  <div class="w-full mt-5">
     <footer class="footer bg-gray-900 p-10">
       <form class="gap-6">
         <div class="flex items-center gap-2 text-xl font-bold">
@@ -383,8 +383,7 @@
         </div>
       </div>
     </footer>
-    </div>
-
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
   <script src="../path/to/flowbite/dist/flowbite.js"></script>
