--- a/public/about.html
+++ b/public/about.html
@@ -104,7 +104,7 @@
         </div>
         <div>
           <img
-            src="img/image.png"
+            src="img/bengkel.jpg"
             alt="Bengkel"
             class="rounded-lg shadow-md"
           />
