--- a/public/index.html
+++ b/public/index.html
@@ -124,8 +124,7 @@
             </h3>
             <span class="text-gray-500 dark:text-gray-400">CEO & Web Developer</span>
             <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
-              Bonnie drives the technical strategy of the flowbite platform
-              and brand.
+             Hari ini sulit, besok akan lebih baik,dan keberhasilan menanti di depan
             </p>
             <ul class="flex space-x-4 sm:mt-0">
               <li>
@@ -176,8 +175,7 @@
             </h3>
             <span class="text-gray-500 dark:text-gray-400">CTO</span>
             <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
-              Jese drives the technical strategy of the flowbite platform and
-              brand.
+              Tidak ada yang mustahil jika kamu percaya dan terus berusaha.
             </p>
             <ul class="flex space-x-4 sm:mt-0">
               <li>
@@ -229,8 +227,7 @@
             </h3>
             <span class="text-gray-500 dark:text-gray-400">Senior Front-end Developer</span>
             <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
-              Michael drives the technical strategy of the flowbite platform
-              and brand.
+              Perubahan kecil yang konsisten jauh lebih baik dari pada rencana besar tanpa aksi.
             </p>
             <ul class="flex space-x-4 sm:mt-0">
               <li>
@@ -278,12 +275,11 @@
           </a>
           <div class="p-5">
             <h3 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white">
-              <a href="#">Bili Gunawan</a>
+              <a href="#">Muhamad Bili Gunawan</a>
             </h3>
             <span class="text-gray-500 dark:text-gray-400">Marketing & Sale</span>
             <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
-              Lana drives the technical strategy of the flowbite platform and
-              brand.
+              jangan hanya bermimpi, bangun dan wujudkan mimpi itu jadi kenyataan
             </p>
             <ul class="flex space-x-4 sm:mt-0">
               <li>
