--- a/public/about.html
+++ b/public/about.html
@@ -215,42 +215,42 @@
         <form class="gap-6">
           <div class="flex items-center gap-2 text-xl font-bold">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><img src="img/logo.jpg" class="h-8" alt="Logo" /></svg>
-            <span>Bengkel King Bili</span>
+            <span><p style="color: white;">Bengkel King Bili</p></span>
           </div>
-          <p class="text-base-content">Don't forget to contact us <br />Like and subscribe.</p>
+          <p class="text-base-content" style="color: white;">Don't forget to contact us <br />Like and subscribe.</p>
           <fieldset>
-            <label class="label label-text" for="subscribeNewsletter"> Subscribe to newsletter </label>
+            <label class="label label-text" for="subscribeNewsletter" style="color: white;"> Subscribe to newsletter </label>
             <div class="flex flex-wrap sm:flex-nowrap w-full gap-1">
               <input class="input input-sm" id="subscribeNewsletter" placeholder="johndoe@gmail.com" />
-              <button class="btn btn-sm btn-primary">Subscribe</button>
+              <button class="btn btn-sm btn-primary" style="color: white;">Subscribe</button>
             </div>
           </fieldset>
         </form>
         <nav class="text-base-content">
-          <h6 class="footer-title">Services</h6>
-          <a href="#" class="link link-hover">Service Ringan</a>
-          <a href="#" class="link link-hover">Service Besar</a>
-          <a href="#" class="link link-hover">Body Repair</a>
-          <a href="#" class="link link-hover">Pembersihan & Detailing</a>
+          <h6 class="footer-title" style="color: white;">Services</h6>
+          <a href="#" class="link link-hover" style="color: white;">Service Ringan</a>
+          <a href="#" class="link link-hover" style="color: white;">Service Besar</a>
+          <a href="#" class="link link-hover" style="color: white;">Body Repair</a>
+          <a href="#" class="link link-hover" style="color: white;">Pembersihan & Detailing</a>
         </nav>
         <nav class="text-base-content">
-          <h6 class="footer-title">Company</h6>
-          <a href="#" class="link link-hover">About us</a>
-          <a href="#" class="link link-hover">Contact</a>
-          <a href="#" class="link link-hover">Jobs</a>
-          <a href="#" class="link link-hover">Press kit</a>
+          <h6 class="footer-title" style="color: white;">Company</h6>
+          <a href="#" class="link link-hover" style="color: white;">About us</a>
+          <a href="#" class="link link-hover" style="color: white;">Contact</a>
+          <a href="#" class="link link-hover" style="color: white;">Jobs</a>
+          <a href="#" class="link link-hover" style="color: white;">Press kit</a>
         </nav>
         <nav class="text-base-content">
-          <h6 class="footer-title">Legal</h6>
-          <a href="#" class="link link-hover">Terms of use</a>
-          <a href="#" class="link link-hover">Privacy policy</a>
-          <a href="#" class="link link-hover">Cookie policy</a>
+          <h6 class="footer-title" style="color: white;">Legal</h6>
+          <a href="#" class="link link-hover" style="color: white;">Terms of use</a>
+          <a href="#" class="link link-hover" style="color: white;">Privacy policy</a>
+          <a href="#" class="link link-hover" style="color: white;">Cookie policy</a>
         </nav>
       </footer>
       <footer class="footer bg-black border-base-content/25 border-t px-6 py-4">
         <div class="flex w-full items-center justify-between">
           <aside class="grid-flow-col items-center">
-            <p>©2025 <a class="link link-hover font-medium" href="#">Bengkel King Bili</a></p>
+            <p style="color: white;">©2025 <a class="link link-hover font-medium" href="#">Bengkel King Bili</a></p>
           </aside>
           <div class="flex h-5 gap-4">
             <a href="#" class="link" aria-label="Github Link">
