--- a/public/about.html
+++ b/public/about.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
+      <link href="css/style.css" rel="stylesheet" />
   </head>
   <body class="bg-gray-100">
     <nav class="bg-white border-gray-200 dark:bg-gray-900 fixed top-0 w-full z-50 shadow">
@@ -209,42 +209,43 @@
     <!-- Section 4: Testimonial -->
   </main>
 
+
     <!-- footer -->
     <div class="w-full">
       <footer class="footer bg-gray-900 p-10">
         <form class="gap-6">
           <div class="flex items-center gap-2 text-xl font-bold">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><img src="img/logo.jpg" class="h-8" alt="Logo" /></svg>
-            <span><p style="color: white;">Bengkel King Bili</p></span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><img src="img/logo.jpg" class="h-8" alt="Logo" ></svg>
+            <span><p style="color: aliceblue;">Bengkel King Bili</p></span>
           </div>
-          <p class="text-base-content" style="color: white;">Don't forget to contact us <br />Like and subscribe.</p>
+          <p class="text-base-content"><p style="color: aliceblue;">Don't forget to contact us<br />Like and subscribe.</p>
           <fieldset>
-            <label class="label label-text" for="subscribeNewsletter" style="color: white;"> Subscribe to newsletter </label>
+            <label class="label label-text" for="subscribeNewsletter"><p style="color: white;">Subscribe to newsletter</p></label>
             <div class="flex flex-wrap sm:flex-nowrap w-full gap-1">
               <input class="input input-sm" id="subscribeNewsletter" placeholder="johndoe@gmail.com" />
-              <button class="btn btn-sm btn-primary" style="color: white;">Subscribe</button>
+              <button class="btn btn-sm btn-primary">Subscribe</button>
             </div>
           </fieldset>
         </form>
         <nav class="text-base-content">
-          <h6 class="footer-title" style="color: white;">Services</h6>
-          <a href="#" class="link link-hover" style="color: white;">Service Ringan</a>
-          <a href="#" class="link link-hover" style="color: white;">Service Besar</a>
-          <a href="#" class="link link-hover" style="color: white;">Body Repair</a>
-          <a href="#" class="link link-hover" style="color: white;">Pembersihan & Detailing</a>
+          <h6 class="footer-title"><p style="color: white;">Services</p></h6>
+          <a href="#" class="link link-hover"><p style="color: white;">Service Ringan</p></a>
+          <a href="#" class="link link-hover"><p style="color: white;">Service Besar</p></a>
+          <a href="#" class="link link-hover"><p style="color: white;">Body Repair</p></a>
+          <a href="#" class="link link-hover"><p style="color: white;">Pembersihan & Detailing</p></a>
         </nav>
         <nav class="text-base-content">
-          <h6 class="footer-title" style="color: white;">Company</h6>
-          <a href="#" class="link link-hover" style="color: white;">About us</a>
-          <a href="#" class="link link-hover" style="color: white;">Contact</a>
-          <a href="#" class="link link-hover" style="color: white;">Jobs</a>
-          <a href="#" class="link link-hover" style="color: white;">Press kit</a>
+          <h6 class="footer-title"><p style="color: white;">Company</p></h6>
+          <a href="#" class="link link-hover"><p style="color: white;">About us</p></a>
+          <a href="#" class="link link-hover"><p style="color: white;">Contact</p></a>
+          <a href="#" class="link link-hover"><p style="color: white;">Jobs</p></a>
+          <a href="#" class="link link-hover"><p style="color: white;">Press kit</p></a>
         </nav>
         <nav class="text-base-content">
-          <h6 class="footer-title" style="color: white;">Legal</h6>
-          <a href="#" class="link link-hover" style="color: white;">Terms of use</a>
-          <a href="#" class="link link-hover" style="color: white;">Privacy policy</a>
-          <a href="#" class="link link-hover" style="color: white;">Cookie policy</a>
+          <h6 class="footer-title"><p style="color: white;">Legal</p></h6>
+          <a href="#" class="link link-hover"><p style="color: white;">Terms of use</p></a>
+          <a href="#" class="link link-hover"><p style="color: white;">Privacy policy</p></a>
+          <a href="#" class="link link-hover"><p style="color: white;">Cookie policy</p></a>
         </nav>
       </footer>
       <footer class="footer bg-black border-base-content/25 border-t px-6 py-4">
@@ -270,9 +271,13 @@
       </footer>
     </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
-  <script src="../path/to/flowbite/dist/flowbite.js"></script>
-  <script src="../node_modules/flyonui/flyonui.js"></script>
-  <script src="../node_modules/flyonui/dist/js/accordion.js"></script>
+    
+  
+    
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+    <script src="../path/to/flowbite/dist/flowbite.js"></script>
+    <script src="../node_modules/flyonui/flyonui.js"></script>
+    <script src="../node_modules/flyonui/dist/js/accordion.js"></script>
   </body>
 </html>
