--- a/public/login.html
+++ b/public/login.html
@@ -14,7 +14,7 @@
       const password = document.getElementById("password").value;
       if (username === validUsername && password === validPassword) {
         alert("Login berhasil! Selamat datang, " + username);
-        window.location.href = "index.html";
+        window.location.href = "backend.html";
       } else {
         alert("Username atau password salah.");
       }
