--- a/public/index.html
+++ b/public/index.html
@@ -76,28 +76,24 @@
     </div>
   </nav>
 
-  <div class="flex items-center justify-center min-h-screen bg-gray-100 dark:bg-gray-800">
-    <div class="text-center">
-      <h1
-        class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
-        Selamat Datang di Bengkel King
-      </h1>
-      <p class="mb-6 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">
-        Kami adalah bengkel terpercaya yang menyediakan berbagai layanan untuk
-        memastikan kendaraan Anda selalu dalam kondisi terbaik. Dari perawatan
-        rutin hingga perbaikan kompleks, tenaga ahli kami siap melayani Anda
-        dengan profesionalisme dan dedikasi tinggi
-      </p>
-      <a href="#services"
-        class="inline-flex items-center justify-center px-5 py-3 text-base font-normal text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-        Lihat Selengkapnya
-        <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-          viewBox="0 0 14 10">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M1 5h12m0 0L9 1m4 4L9 9" />
-        </svg>
-      </a>
-    </div>
+  <div class="flex items-center justify-center min-h-screen dark:bg-gray-800">
+    <section class="bg-center bg-no-repeat bg-[url('img/bengkel.jpg')] bg-gray-700 bg-blend-multiply">
+      <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
+          <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">Selamat Datang di Bengkel King</h1>
+          <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Kami adalah bengkel terpercaya yang menyediakan berbagai layanan untuk
+            memastikan kendaraan Anda selalu dalam kondisi terbaik. Dari perawatan
+            rutin hingga perbaikan kompleks, tenaga ahli kami siap melayani Anda
+            dengan profesionalisme dan dedikasi tinggi</p>
+          <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
+              <a href="#services" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
+                  Lihat Selengkapnya
+                  <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                  </svg>
+              </a> 
+          </div>
+      </div>
+    </section>
   </div>
 
   <section class="bg-white dark:bg-gray-900">
