--- a/frontend/backend/index.html
+++ b/frontend/backend/index.html
@@ -246,7 +246,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="./starter.html" class="nav-link">
+            <a href="../public/index.html" class="nav-link">
               <p>
                 Logout
               </p>
