--- a/frontend/backend/pages/montir.html
+++ b/frontend/backend/pages/montir.html
@@ -235,7 +235,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="../starter.html" class="nav-link">
+            <a href="../../public/index.html" class="nav-link">
               <p>
                 Logout
               </p>
