--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -103,8 +103,7 @@
           Our Team
         </h2>
         <p class="font-light text-gray-500 lg:mb-16 sm:text-xl dark:text-gray-400">
-          Explore the whole collection of open-source web components and
-          elements built with the utility classes from Tailwind
+          Dengan kerja sama yang solid dan keahlian serta pengalaman, kami berkomitmen untuk memberikan hasil terbaik dalam setiap pekerjaan.
         </p>
       </div>
       <div class="grid gap-8 mb-6 lg:mb-16 md:grid-cols-2">
