--- a/frontend/backend/pages/montir.html
+++ b/frontend/backend/pages/montir.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../dist/css/adminlte.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -254,6 +255,80 @@
     </div>
   </section>
  
+<div class="container mt-5">
+  <div class="">
+    <h1>Daftar Montir / Mekanik</h1>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="backend/plugins/index.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Admin</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Montir/Mekanik</li>
+        </ol>
+    </nav>
+
+    <button class="btn btn-primary">Tambah</button>
+
+    <table class="table table-bordered mt-4">
+        <thead>
+            <tr>
+                <th>No</th>
+                <th>Nama Mekanik</th>
+                <th>Jenis Montir</th>
+                <th>Pengalaman</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Muhamad Bili Gunawan</td>
+                <td>Senior Mekanik</td>
+                <td>11 tahun</td>
+                <td>
+                    <button class="btn btn-info btn-sm">Detail</button>
+                    <button class="btn btn-warning btn-sm">Edit</button>
+                    <button class="btn btn-danger btn-sm">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Rois Azam sidiq</td>
+                <td>Senior Mekanik</td>
+                <td>10 tahun</td>
+                <td>
+                    <button class="btn btn-info btn-sm">Detail</button>
+                    <button class="btn btn-warning btn-sm">Edit</button>
+                    <button class="btn btn-danger btn-sm">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Muhamad Rojali</td>
+                <td>Senior Mekanik</td>
+                <td>9 tahun</td>
+                <td>
+                    <button class="btn btn-info btn-sm">Detail</button>
+                    <button class="btn btn-warning btn-sm">Edit</button>
+                    <button class="btn btn-danger btn-sm">Delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Akmal Maulana</td>
+                <td>Senior Mekanik</td>
+                <td>8 tahun</td>
+                <td>
+                    <button class="btn btn-info btn-sm">Detail</button>
+                    <button class="btn btn-warning btn-sm">Edit</button>
+                    <button class="btn btn-danger btn-sm">Delete</button>
+                </td>
+            </tr>
+            <!-- Tambahkan baris lain sesuai kebutuhan -->
+        </tbody>
+    </table>
+  </div>
+</div>
+
   <!-- /.content-wrapper -->
   <footer class="main-footer">
     <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
@@ -287,5 +362,7 @@
 <script src="../dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="../dist/js/demo.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
