--- a/frontend/backend/dashboard.html
+++ b/frontend/backend/dashboard.html
@@ -188,7 +188,7 @@
           <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Bengkel King Bili</a>
+          <a href="#" class="d-block">Bengkel King</a>
         </div>
       </div>
 
@@ -209,28 +209,6 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item menu-open">
-            <a href="#" class="nav-link active">
-              <p>
-                Transaksi
-                <i class="right fas fa-angle-left"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="./pages/cart.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Cart</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="./pages/service.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Service</p>
-                </a>
-              </li>
-            </ul>
-          </li>
           <li class="nav-item">
             <a href="./pages/produk.html" class="nav-link">
               <p>
