--- a/frontend/public/about.html
+++ b/frontend/public/about.html
@@ -216,7 +216,7 @@
         <form class="gap-6">
           <div class="flex items-center gap-2 text-xl font-bold">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><img src="img/logo.jpg" class="h-8" alt="Logo" ></svg>
-            <span><p style="color: aliceblue;">Bengkel King Bili</p></span>
+            <span><p style="color: aliceblue;">Bengkel King</p></span>
           </div>
           <p class="text-base-content"><p style="color: aliceblue;">Don't forget to contact us<br />Like and subscribe.</p>
           <fieldset>
@@ -251,7 +251,7 @@
       <footer class="footer bg-black border-base-content/25 border-t px-6 py-4">
         <div class="flex w-full items-center justify-between">
           <aside class="grid-flow-col items-center">
-            <p style="color: white;">©2025 <a class="link link-hover font-medium" href="#">Bengkel King Bili</a></p>
+            <p style="color: white;">©2025 <a class="link link-hover font-medium" href="#">Bengkel King</a></p>
           </aside>
           <div class="flex h-5 gap-4">
             <a href="#" class="link" aria-label="Github Link">
