--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -14,7 +14,7 @@
       const password = document.getElementById("password").value;
       if (username === validUsername && password === validPassword) {
         alert("Login berhasil! Selamat datang, " + username);
-        window.location.href = "../backend/index.html";
+        window.location.href = "../backend/dashboard.html";
       } else {
         alert("Username atau password salah.");
       }
@@ -25,7 +25,7 @@
   <div class="flex items-center justify-center min-h-screen bg-gray-100">
     <div class="w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 md:p-8 dark:bg-gray-800 dark:border-gray-700">
       <form class="space-y-6" onsubmit="processLogin(event)">
-        <h5 class="text-xl font-medium text-gray-900 dark:text-white">Sign in to our platform</h5>
+        <h5 class="text-xl font-medium text-gray-900 dark:text-white">Sign in Account</h5>
         <div>
           <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your username</label>
           <input type="text" id="username" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="Username" required>
@@ -35,6 +35,7 @@
           <input type="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="••••••••" required>
         </div>
         <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login</button>
+        <button type="submit" class="w-full text-blue"> <a href="sign_up.html">Create Account</a></button>
       </form>
     </div>
   </div>
