--- a/frontend/backend/pages/produk.html
+++ b/frontend/backend/pages/produk.html
@@ -202,7 +202,7 @@
           <li class="nav-item">
             <a href="./produk.html" class="nav-link active">
               <p>
-                Produk
+                Transaksi
               </p>
             </a>
           </li>
