--- a/frontend/backend/pages/montir.html
+++ b/frontend/backend/pages/montir.html
@@ -227,86 +227,85 @@
   </aside>
 
   <!-- Content Wrapper. Contains page content -->
-  <section class="content">
+  <section class="content-wrapper">
     <div class="container-fluid">
-      
+      <div class="container mt-5">
+        <div class="">
+          <h1>Daftar Montir / Mekanik</h1>
+          <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="backend/plugins/index.html">Home</a></li>
+                  <li class="breadcrumb-item"><a href="#">Admin</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Montir/Mekanik</li>
+              </ol>
+          </nav>
+          <div>
+            <button class="btn btn-primary">Tambah</button>
+          <table class="table table-bordered mt-4">
+              <thead>
+                  <tr>
+                      <th>No</th>
+                      <th>Nama Mekanik</th>
+                      <th>Jenis Montir</th>
+                      <th>Pengalaman</th>
+                      <th>Action</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td>1</td>
+                      <td>Muhamad Bili Gunawan</td>
+                      <td>Senior Mekanik</td>
+                      <td>11 tahun</td>
+                      <td>
+                          <button class="btn btn-info btn-sm">Detail</button>
+                          <button class="btn btn-warning btn-sm">Edit</button>
+                          <button class="btn btn-danger btn-sm">Delete</button>
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>2</td>
+                      <td>Rois Azam sidiq</td>
+                      <td>Senior Mekanik</td>
+                      <td>10 tahun</td>
+                      <td>
+                          <button class="btn btn-info btn-sm">Detail</button>
+                          <button class="btn btn-warning btn-sm">Edit</button>
+                          <button class="btn btn-danger btn-sm">Delete</button>
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>3</td>
+                      <td>Muhamad Rojali</td>
+                      <td>Senior Mekanik</td>
+                      <td>9 tahun</td>
+                      <td>
+                          <button class="btn btn-info btn-sm">Detail</button>
+                          <button class="btn btn-warning btn-sm">Edit</button>
+                          <button class="btn btn-danger btn-sm">Delete</button>
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>4</td>
+                      <td>Akmal Maulana</td>
+                      <td>Senior Mekanik</td>
+                      <td>8 tahun</td>
+                      <td>
+                          <button class="btn btn-info btn-sm">Detail</button>
+                          <button class="btn btn-warning btn-sm">Edit</button>
+                          <button class="btn btn-danger btn-sm">Delete</button>
+                      </td>
+                  </tr>
+                  <!-- Tambahkan baris lain sesuai kebutuhan -->
+              </tbody>
+          </table>
+          </div>
+          
+        </div>
+      </div>
     </div>
   </section>
  
-<div class="container mt-5">
-  <div class="">
-    <h1>Daftar Montir / Mekanik</h1>
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="backend/plugins/index.html">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Admin</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Montir/Mekanik</li>
-        </ol>
-    </nav>
-
-    <button class="btn btn-primary">Tambah</button>
-
-    <table class="table table-bordered mt-4">
-        <thead>
-            <tr>
-                <th>No</th>
-                <th>Nama Mekanik</th>
-                <th>Jenis Montir</th>
-                <th>Pengalaman</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Muhamad Bili Gunawan</td>
-                <td>Senior Mekanik</td>
-                <td>11 tahun</td>
-                <td>
-                    <button class="btn btn-info btn-sm">Detail</button>
-                    <button class="btn btn-warning btn-sm">Edit</button>
-                    <button class="btn btn-danger btn-sm">Delete</button>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Rois Azam sidiq</td>
-                <td>Senior Mekanik</td>
-                <td>10 tahun</td>
-                <td>
-                    <button class="btn btn-info btn-sm">Detail</button>
-                    <button class="btn btn-warning btn-sm">Edit</button>
-                    <button class="btn btn-danger btn-sm">Delete</button>
-                </td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Muhamad Rojali</td>
-                <td>Senior Mekanik</td>
-                <td>9 tahun</td>
-                <td>
-                    <button class="btn btn-info btn-sm">Detail</button>
-                    <button class="btn btn-warning btn-sm">Edit</button>
-                    <button class="btn btn-danger btn-sm">Delete</button>
-                </td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Akmal Maulana</td>
-                <td>Senior Mekanik</td>
-                <td>8 tahun</td>
-                <td>
-                    <button class="btn btn-info btn-sm">Detail</button>
-                    <button class="btn btn-warning btn-sm">Edit</button>
-                    <button class="btn btn-danger btn-sm">Delete</button>
-                </td>
-            </tr>
-            <!-- Tambahkan baris lain sesuai kebutuhan -->
-        </tbody>
-    </table>
-  </div>
-</div>
-
   <!-- /.content-wrapper -->
   <footer class="main-footer">
     <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
