--- a/frontend/backend/pages/produk.html
+++ b/frontend/backend/pages/produk.html
@@ -227,7 +227,7 @@
   </aside>
 
   <!-- Content Wrapper. Contains page content -->
-  <section class="content">
+  <section class="content-wrapper">
     <div class="container-fluid">
       
       <div class="container mt-5">
